Add additional layout to Hierarchy View.

--- a/app/src/main/res/layout/activity_hierarchy_viewer.xml
+++ b/app/src/main/res/layout/activity_hierarchy_viewer.xml
@@ -15,7 +15,6 @@
   limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -84,6 +83,42 @@
                         android:contentDescription="@null" />
 
                 </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/grid_spacing"
+                    android:layout_marginBottom="0dp"
+                    android:background="@android:color/white" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="@dimen/grid_spacing"
+                    android:paddingBottom="@dimen/grid_spacing"
+                    android:gravity="left|center_vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_camera_white_48dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginRight="8dp"
+                        android:contentDescription="@null"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/hierarchy_viewer_attribution_unsplash"
+                        style="@style/TextAppearance.AppCompat.Body2" />
+
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/white" />
 
                 <LinearLayout
                     android:orientation="horizontal"
