--- a/app/src/main/res/layout/activity_hierarchy_viewer.xml
+++ b/app/src/main/res/layout/activity_hierarchy_viewer.xml
@@ -22,19 +22,8 @@
               tools:context=".ui.HierarchyViewerActivity"
               tools:ignore="RtlHardcoded">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/CardViewToolbar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:title="@string/activity_title_hierarchy_viewer"
-            android:background="?attr/colorPrimary"/>
-
-    </android.support.v7.widget.CardView>
+    <!-- App bar -->
+    <include layout="@layout/app_bar_default" />
 
     <ScrollView
         android:layout_width="match_parent"
