--- a/app/src/main/res/layout/activity_simple_views.xml
+++ b/app/src/main/res/layout/activity_simple_views.xml
@@ -14,20 +14,12 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <!-- App bar -->
     <include layout="@layout/app_bar_default" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/example_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </LinearLayout>
