Change from "left/right" to "start/end" in XML.

--- a/app/src/main/res/layout/list_item_example.xml
+++ b/app/src/main/res/layout/list_item_example.xml
@@ -19,14 +19,14 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:minHeight="@dimen/list_item_example_height_min"
-          android:paddingLeft="@dimen/list_item_text_margin_left"
-          android:paddingRight="@dimen/list_item_spacing"
+          android:paddingStart="@dimen/list_item_text_margin_start"
+          android:paddingEnd="@dimen/list_item_spacing"
           android:paddingTop="@dimen/list_item_padding_vertical"
           android:paddingBottom="@dimen/list_item_padding_vertical"
           android:drawablePadding="@dimen/list_item_drawable_padding"
           android:gravity="left|center_vertical"
           android:background="?attr/selectableItemBackground"
           android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-          tools:drawableLeft="@drawable/ic_view_quilt_white_36dp"
+          tools:drawableStart="@drawable/ic_view_quilt_white_36dp"
           tools:text="Example List Item"
           tools:ignore="RtlHardcoded" />
