--- a/app/src/main/res/layout/activity_hierarchy_viewer.xml
+++ b/app/src/main/res/layout/activity_hierarchy_viewer.xml
@@ -42,8 +42,8 @@
                 android:orientation="vertical"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:paddingLeft="@dimen/grid_spacing"
-                android:paddingRight="@dimen/grid_spacing">
+                android:paddingStart="@dimen/grid_spacing"
+                android:paddingEnd="@dimen/grid_spacing">
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -52,18 +52,18 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/row01_left_image"
+                        android:id="@+id/row01_start_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="2"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="@dimen/grid_spacing"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
                         android:src="@drawable/unsplash_berries_frozen"
                         android:scaleType="centerCrop"
                         android:contentDescription="@null" />
 
                     <ImageView
-                        android:id="@+id/row01_right_image"
+                        android:id="@+id/row01_end_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="1"
@@ -92,8 +92,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_camera_white_48dp"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="8dp"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="8dp"
                         android:contentDescription="@null"/>
 
                     <TextView
@@ -118,17 +118,17 @@
                     android:layout_marginBottom="0dp">
 
                     <ImageView
-                        android:id="@+id/row02_left_image"
+                        android:id="@+id/row02_start_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="1"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="@dimen/grid_spacing"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
                         android:src="@drawable/unsplash_lemonade_spicy"
                         android:scaleType="centerCrop" />
 
                     <ImageView
-                        android:id="@+id/row02_right_image"
+                        android:id="@+id/row02_end_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="1"
@@ -146,12 +146,12 @@
                     android:layout_marginBottom="0dp">
 
                     <ImageView
-                        android:id="@+id/row03_left_image"
+                        android:id="@+id/row03_start_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="1"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="@dimen/grid_spacing"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
                         android:src="@drawable/unsplash_cookies_almond"
                         android:scaleType="centerCrop" />
 
@@ -160,8 +160,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="@dimen/grid_spacing"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
                         android:gravity="center"
                         android:background="@color/grey_900_26p">
 
@@ -202,7 +202,7 @@
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/row03_right_image"
+                        android:id="@+id/row03_end_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="1"
@@ -220,12 +220,12 @@
                     android:layout_marginBottom="0dp">
 
                     <ImageView
-                        android:id="@+id/row04_left_image"
+                        android:id="@+id/row04_start_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="2"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="@dimen/grid_spacing"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
                         android:src="@drawable/unsplash_berries_plate"
                         android:scaleType="centerCrop" />
 
@@ -234,13 +234,13 @@
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="2"
-                        android:layout_marginLeft="0dp"
-                        android:layout_marginRight="@dimen/grid_spacing"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
                         android:src="@drawable/unsplash_grapes_purple"
                         android:scaleType="centerCrop" />
 
                     <ImageView
-                        android:id="@+id/row04_right_image"
+                        android:id="@+id/row04_end_image"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/hierarchy_viewer_image_height"
                         android:layout_weight="1"
@@ -254,8 +254,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin">
 
