--- a/app/src/main/res/layout/list_subheader.xml
+++ b/app/src/main/res/layout/list_subheader.xml
@@ -20,8 +20,8 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:minHeight="@dimen/list_subheader_height_min"
-          android:paddingLeft="@dimen/list_item_spacing"
-          android:paddingRight="@dimen/list_item_spacing"
+          android:paddingStart="@dimen/list_item_spacing"
+          android:paddingEnd="@dimen/list_item_spacing"
           android:paddingTop="@dimen/list_item_spacing"
           android:paddingBottom="@dimen/list_item_spacing"
           android:gravity="left|center_vertical"
