--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="grey_900_26p">#42212121</color>
 
     <color name="pink_500">#E91E63</color>
+
+    <color name="white_12p">#1FFFFFFF</color>
 </resources>
