--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,9 @@
     <!-- Toolbar -->
     <dimen name="toolbar_card_view_padding">-8dp</dimen>
 
+    <!-- Divider -->
+    <dimen name="divider_margin_vertical">8dp</dimen>
+
     <!-- List metrics -->
     <dimen name="list_subheader_height_min">48dp</dimen>
     <dimen name="list_item_spacing">16dp</dimen>
@@ -45,5 +48,9 @@
     <dimen name="view_attributes_card_spacing">24dp</dimen>
     <dimen name="view_attributes_icon_spacing">8dp</dimen>
     <dimen name="view_attributes_background_square_width">160dp</dimen>
+
+    <!-- Lint Warnings Example -->
+    <dimen name="lint_single_child_padding_vertical">16dp</dimen>
+    <dimen name="lint_single_nested_padding">4dp</dimen>
 
 </resources>
