--- a/app/src/main/res/layout/activity_hierarchy_viewer.xml
+++ b/app/src/main/res/layout/activity_hierarchy_viewer.xml
@@ -16,19 +16,20 @@
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               tools:context=".ui.HierarchyViewerActivity"
-              tools:ignore="RtlHardcoded">
+              tools:ignore="RtlHardcoded"
+              android:orientation="vertical">
 
     <!-- App bar -->
     <include layout="@layout/app_bar_default" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:layout_weight="1">
 
         <LinearLayout
             android:orientation="vertical"
@@ -36,6 +37,178 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/grid_spacing"
             android:paddingBottom="0dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/grid_spacing"
+                android:paddingEnd="@dimen/grid_spacing">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginEnd="@dimen/grid_spacing"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="@dimen/grid_spacing">
+
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/hierarchy_viewer_image_small_height"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="@dimen/grid_spacing">
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="@dimen/hierarchy_viewer_image_height"
+                                android:layout_weight="1"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginEnd="@dimen/grid_spacing"
+                                android:src="@drawable/unsplash_small_garlic_bulbs"
+                                android:scaleType="centerCrop"
+                                android:contentDescription="@null" />
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="@dimen/hierarchy_viewer_image_height"
+                                android:layout_weight="1"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginEnd="@dimen/grid_spacing"
+                                android:src="@drawable/unsplash_small_bananas"
+                                android:scaleType="centerCrop"
+                                android:contentDescription="@null" />
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="@dimen/hierarchy_viewer_image_height"
+                                android:layout_weight="1"
+                                android:src="@drawable/unsplash_small_blueberries"
+                                android:scaleType="centerCrop"
+                                android:contentDescription="@null" />
+
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="@dimen/grid_spacing">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/hierarchy_viewer_image_height"
+                                android:layout_weight="1"
+                                android:src="@drawable/unsplash_small_apple_green"
+                                android:scaleType="centerCrop"
+                                android:contentDescription="@null" />
+
+                            <FrameLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+                                <LinearLayout
+                                    android:orientation="vertical"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:paddingStart="@dimen/hierarchy_view_text_overlay_margin_horizontal"
+                                    android:paddingEnd="@dimen/hierarchy_view_text_overlay_margin_horizontal"
+                                    android:paddingTop="@dimen/hierarchy_viewer_text_margin_vertical"
+                                    android:paddingBottom="0dp"
+                                    android:background="@color/black_48p">
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="Frutas"
+                                        style="@style/TextAppearance.LLL.Overlay1" />
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="Fruit"
+                                        android:gravity="right"
+                                        style="@style/TextAppearance.LLL.Overlay2" />
+
+                                    <TextView
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:text="Trái Cây"
+                                        style="@style/TextAppearance.LLL.Overlay1" />
+
+                                </LinearLayout>
+
+                            </FrameLayout>
+
+                        </RelativeLayout>
+
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/hierarchy_viewer_image_small_height">
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="@dimen/hierarchy_viewer_image_height"
+                                android:layout_weight="1"
+                                android:layout_marginStart="0dp"
+                                android:layout_marginEnd="@dimen/grid_spacing"
+                                android:src="@drawable/unsplash_small_green_beans"
+                                android:scaleType="centerCrop"
+                                android:contentDescription="@null" />
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="@dimen/hierarchy_viewer_image_height"
+                                android:layout_weight="1"
+                                android:src="@drawable/unsplash_small_tomato"
+                                android:scaleType="centerCrop"
+                                android:contentDescription="@null" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="@dimen/grid_spacing">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="@dimen/grid_spacing"
+                            android:src="@drawable/unsplash_small_citrus"
+                            android:scaleType="centerCrop"
+                            android:contentDescription="@null" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:src="@drawable/unsplash_small_plum"
+                            android:scaleType="centerCrop"
+                            android:contentDescription="@null" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
